// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render PhotographyGridSection component w/ images. 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border-bottom: 1px solid hsla(237,1.8338775999999992%,0%,0.2);
  color: textMediumMuted;
  font-family: smallcaps;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 48px;
  margin-bottom: 8px;
  margin-left: 8px;
  margin-right: 8px;
}

<h2
    className="c0 flex fw5"
    fontSize="6"
  >
    <a
      href="/true/#"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      01 May 2019
    </a>
  </h2>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  height: NaNpx;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    className="c0 mt2 mb4"
  >
    <div
      style={
        Object {
          "height": NaN,
          "left": 0,
          "position": "absolute",
          "top": NaN,
          "width": 0,
        }
      }
    />
    <div
      style={
        Object {
          "height": NaN,
          "left": -0,
          "position": "absolute",
          "top": NaN,
          "width": 0,
        }
      }
    />
  </div>,
]
`;

exports[`Render PhotographyGridSection component. 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border-bottom: 1px solid hsla(237,1.8338775999999992%,0%,0.2);
  color: textMediumMuted;
  font-family: smallcaps;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 48px;
  margin-bottom: 8px;
  margin-left: 8px;
  margin-right: 8px;
}

<h2
    className="c0 flex fw5"
    fontSize="6"
  >
    <a
      href="/true/#"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      01 May 2019
    </a>
  </h2>,
  .c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  height: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    className="c0 mt2 mb4"
  />,
]
`;
